# core

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/libinputactions/: InputActionsMain.cpp
src/libinputactions/actions/: Action.cpp  Action.h  ActionGroup.cpp  ActionGroup.h  CommandAction.cpp  CommandAction.h  CustomAction.cpp  CustomAction.h  InputAction.cpp  InputAction.h  PlasmaGlobalShortcutAction.cpp  PlasmaGlobalShortcutAction.h  ReplaceTextAction.cpp  ReplaceTextAction.h  SleepAction.cpp  SleepAction.h  TriggerAction.cpp  TriggerAction.h
src/libinputactions/conditions/: CanReplaceTextCondition.cpp  CanReplaceTextCondition.h  Condition.cpp  Condition.h  ConditionGroup.cpp  ConditionGroup.h  CustomCondition.cpp  CustomCondition.h  VariableCondition.cpp  VariableCondition.h
src/libinputactions/config/: ConfigIssue.cpp  ConfigIssueManager.cpp  Node.cpp  Node.h
src/libinputactions/config/parsers/: core.cpp  enums.cpp  triggers.cpp  triggers.h
src/libinputactions/dbus/: DBusInterfaceBase.cpp  IntegratedDBusInterface.cpp
src/libinputactions/handlers/: InputTriggerHandler.cpp  InputTriggerHandler.h  KeyboardTriggerHandler.cpp  KeyboardTriggerHandler.h  MotionTriggerHandler.cpp  MotionTriggerHandler.h  MouseTriggerHandler.cpp  MouseTriggerHandler.h  MultiTouchMotionTriggerHandler.cpp  MultiTouchMotionTriggerHandler.h  PointerTriggerHandler.cpp  PointerTriggerHandler.h  TouchpadTriggerHandler.cpp  TouchpadTriggerHandler.h  TouchscreenTriggerHandler.cpp  TouchscreenTriggerHandler.h  TriggerHandler.cpp  TriggerHandler.h
src/libinputactions/input/: Delta.cpp  StrokeRecorder.cpp
src/libinputactions/input/backends/: LibevdevComplementaryInputBackend.cpp
src/libinputactions/input/devices/: InputDeviceProperties.cpp  InputDeviceProperties.h  VirtualMouse.h
src/libinputactions/interfaces/: TextInput.cpp  TextInput.h
src/libinputactions/triggers/: KeyboardShortcutTrigger.h  SwipeTrigger.cpp  SwipeTrigger.h  Trigger.cpp  Trigger.h
src/libinputactions/triggers/core/: DirectionalMotionTriggerCore.cpp  DirectionalMotionTriggerCore.h  MotionTriggerCore.cpp  MotionTriggerCore.h  StrokeTriggerCore.cpp  StrokeTriggerCore.h  SwipeTriggerCore.cpp  SwipeTriggerCore.h  TimeTriggerCore.cpp  TimeTriggerCore.h  TriggerCore.cpp  TriggerCore.h
src/libinputactions/triggers/keyboard/: KeyboardShortcutTrigger.cpp  KeyboardShortcutTrigger.h  KeyboardTrigger.cpp  KeyboardTrigger.h
src/libinputactions/triggers/mouse/: MouseCircleTrigger.cpp  MouseCircleTrigger.h  MouseMotionTrigger.cpp  MouseMotionTrigger.h  MousePressTrigger.cpp  MousePressTrigger.h  MouseStrokeTrigger.cpp  MouseStrokeTrigger.h  MouseSwipeTrigger.cpp  MouseSwipeTrigger.h  MouseTrigger.cpp  MouseTrigger.h  MouseWheelTrigger.cpp  MouseWheelTrigger.h
src/libinputactions/triggers/pointer/: PointerHoverTrigger.cpp  PointerHoverTrigger.h  PointerTrigger.cpp  PointerTrigger.h
src/libinputactions/triggers/touchpad/: TouchpadCircleTrigger.cpp  TouchpadCircleTrigger.h  TouchpadClickTrigger.cpp  TouchpadClickTrigger.h  TouchpadHoldTrigger.cpp  TouchpadHoldTrigger.h  TouchpadPinchTrigger.cpp  TouchpadPinchTrigger.h  TouchpadRotateTrigger.cpp  TouchpadRotateTrigger.h  TouchpadStrokeTrigger.cpp  TouchpadStrokeTrigger.h  TouchpadSwipeTrigger.cpp  TouchpadSwipeTrigger.h  TouchpadTapTrigger.cpp  TouchpadTapTrigger.h  TouchpadTrigger.cpp  TouchpadTrigger.h
src/libinputactions/triggers/touchscreen/: TouchscreenCircleTrigger.cpp  TouchscreenCircleTrigger.h  TouchscreenHoldTrigger.cpp  TouchscreenHoldTrigger.h  TouchscreenPinchTrigger.cpp  TouchscreenPinchTrigger.h  TouchscreenRotateTrigger.cpp  TouchscreenRotateTrigger.h  TouchscreenStrokeTrigger.cpp  TouchscreenStrokeTrigger.h  TouchscreenSwipeTrigger.cpp  TouchscreenSwipeTrigger.h  TouchscreenTapTrigger.cpp  TouchscreenTapTrigger.h  TouchscreenTrigger.cpp  TouchscreenTrigger.h
src/libinputactions/variables/: VariableManager.h
tests/libinputactions/: CMakeLists.txt  Test.h  TestRange.cpp  TestValue.cpp
tests/libinputactions/actions/: TestAction.cpp  TestActionExecutor.cpp  TestActionGroup.cpp  TestActionInterval.cpp  TestTriggerAction.cpp
tests/libinputactions/conditions/: TestConditionGroup.cpp
tests/libinputactions/config/parsers/: TestBaseNodeParser.cpp  TestDeviceRuleNodeParser.cpp  TestEnumNodeParser.cpp  TestFlagsNodeParser.cpp  TestRangeNodeParser.cpp  TestSeparatedStringNodeParser.cpp  TestTriggerActionNodeParser.cpp  TestTriggerGroupNodeParser.cpp  TestTriggerNodeParser.cpp
tests/libinputactions/config/parsers/actions/: TestActionGroupNodeParser.cpp  TestInputActionNodeParser.cpp  TestPlasmaShortcutActionNodeParser.cpp  TestReplaceTextActionNodeParser.cpp
tests/libinputactions/config/parsers/conditions/: TestCanReplaceTextConditionNodeParser.cpp  TestConditionGroupNodeParser.cpp  TestConditionNodeParser.cpp  TestVariableConditionNodeParser.cpp
tests/libinputactions/config/parsers/containers/: TestSetNodeParser.cpp  TestVectorNodeParser.cpp
tests/libinputactions/config/parsers/qt/: TestQPointFNodeParser.cpp  TestQRegularExpressionNodeParser.cpp  TestQStringListNodeParser.cpp  TestQStringNodeParser.cpp
tests/libinputactions/config/parsers/triggers/: TestKeyboardTriggerNodeParser.cpp  TestMouseTriggerNodeParser.cpp  TestPointerTriggerNodeParser.cpp  TestStrokeTriggerCoreNodeParser.cpp  TestSwipeTriggerCoreNodeParser.cpp  TestTouchpadTriggerNodeParser.cpp  (+2 more)
tests/libinputactions/handlers/: TestInputTriggerHandler.cpp  TestKeyboardTriggerHandler.cpp  TestMotionTriggerHandler.cpp  TestTouchpadTriggerHandler.cpp  TestTriggerHandler.cpp
tests/libinputactions/mocks/: MockInputTriggerHandler.h  MockKeyboardTriggerHandler.h  MockMouseTrigger.h  MockPointerTriggerHandler.h  MockSwipeTriggerCore.h  MockTouchpadTriggerHandler.h  MockTrigger.h  MockTriggerHandler.h
tests/libinputactions/triggers/: TestDirectionalMotionTrigger.cpp  TestMotionTrigger.cpp  TestMouseTrigger.cpp  TestSwipeTrigger.cpp  TestTrigger.cpp
tests/libinputactions/triggers/core/: TestDirectionalMotionTriggerCore.cpp  TestMotionTriggerCore.cpp  TestSwipeTriggerCore.cpp
(+1 files in other folders)
