add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../lib/libevdev-cpp ${CMAKE_CURRENT_BINARY_DIR}/../lib/libevdev-cpp)

set(libinputactions_SRCS
    libinputactions/actions/Action.cpp
    libinputactions/actions/ActionExecutor.cpp
    libinputactions/actions/ActionGroup.cpp
    libinputactions/actions/CommandAction.cpp
    libinputactions/actions/CustomAction.cpp
    libinputactions/actions/InputAction.cpp
    libinputactions/actions/PlasmaGlobalShortcutAction.cpp
    libinputactions/actions/SleepAction.cpp
    libinputactions/actions/TriggerAction.cpp
    libinputactions/config/parsers/base.cpp
    libinputactions/config/parsers/containers.h
    libinputactions/config/parsers/core.cpp
    libinputactions/config/parsers/enums.cpp
    libinputactions/config/parsers/flags.cpp
    libinputactions/config/parsers/NodeParser.h
    libinputactions/config/parsers/qt.cpp
    libinputactions/config/parsers/separated-string.h
    libinputactions/config/parsers/std.cpp
    libinputactions/config/parsers/utils.h
    libinputactions/config/ConfigIssue.cpp
    libinputactions/config/ConfigIssueManager.cpp
    libinputactions/config/ConfigLoader.cpp
    libinputactions/config/GlobalConfig.cpp
    libinputactions/config/Node.cpp
    libinputactions/config/TextPosition.cpp
    libinputactions/conditions/Condition.cpp
    libinputactions/conditions/ConditionGroup.cpp
    libinputactions/conditions/CustomCondition.cpp
    libinputactions/conditions/VariableCondition.cpp
    libinputactions/dbus/DBusInterfaceBase.cpp
    libinputactions/dbus/IntegratedDBusInterface.cpp
    libinputactions/handlers/InputTriggerHandler.cpp
    libinputactions/handlers/KeyboardTriggerHandler.cpp
    libinputactions/handlers/MotionTriggerHandler.cpp
    libinputactions/handlers/MouseTriggerHandler.cpp
    libinputactions/handlers/MultiTouchMotionTriggerHandler.cpp
    libinputactions/handlers/PointerTriggerHandler.cpp
    libinputactions/handlers/TouchpadTriggerHandler.cpp
    libinputactions/handlers/TouchscreenTriggerHandler.cpp
    libinputactions/handlers/TriggerHandler.cpp
    libinputactions/helpers/Math.cpp
    libinputactions/helpers/QString.cpp
    libinputactions/helpers/QThread.cpp
    libinputactions/helpers/QVariant.cpp
    libinputactions/helpers/Session.cpp
    libinputactions/input/backends/InputBackend.cpp
    libinputactions/input/backends/LibevdevComplementaryInputBackend.cpp
    libinputactions/input/backends/LibinputInputBackend.cpp
    libinputactions/input/devices/InputDevice.cpp
    libinputactions/input/devices/InputDeviceProperties.cpp
    libinputactions/input/devices/InputDeviceRule.cpp
    libinputactions/input/devices/InputDeviceState.cpp
    libinputactions/input/devices/VirtualKeyboard.cpp
    libinputactions/input/devices/VirtualMouse.cpp
    libinputactions/input/Delta.cpp
    libinputactions/input/InputEventHandler.cpp
    libinputactions/input/KeyboardKey.cpp
    libinputactions/input/MouseButton.cpp
    libinputactions/input/StrokeRecorder.cpp
    libinputactions/input/events.cpp
    libinputactions/interfaces/implementations/DBusNotificationManager.cpp
    libinputactions/interfaces/implementations/DBusPlasmaGlobalShortcutInvoker.cpp
    libinputactions/interfaces/implementations/FileConfigProvider.cpp
    libinputactions/interfaces/implementations/ProcessRunnerImpl.cpp
    libinputactions/interfaces/ConfigProvider.cpp
    libinputactions/interfaces/CursorShapeProvider.h
    libinputactions/interfaces/NotificationManager.h
    libinputactions/interfaces/OnScreenMessageManager.h
    libinputactions/interfaces/PlasmaGlobalShortcutInvoker.h
    libinputactions/interfaces/PointerPositionGetter.h
    libinputactions/interfaces/PointerPositionSetter.h
    libinputactions/interfaces/ProcessRunner.cpp
    libinputactions/interfaces/SessionLock.h
    libinputactions/interfaces/Window.h
    libinputactions/interfaces/WindowProvider.cpp
    libinputactions/triggers/DirectionalMotionTrigger.cpp
    libinputactions/triggers/HoverTrigger.cpp
    libinputactions/triggers/KeyboardShortcutTrigger.cpp
    libinputactions/triggers/MotionTrigger.cpp
    libinputactions/triggers/PressTrigger.cpp
    libinputactions/triggers/StrokeTrigger.cpp
    libinputactions/triggers/SwipeTrigger.cpp
    libinputactions/triggers/Trigger.cpp
    libinputactions/triggers/WheelTrigger.cpp
    libinputactions/variables/LocalVariable.cpp
    libinputactions/variables/RemoteVariable.cpp
    libinputactions/variables/VariableManager.cpp
    libinputactions/variables/VariableOperations.cpp
    libinputactions/variables/Variable.cpp
    libinputactions/variables/VariableWrapper.h
    libinputactions/globals.cpp
    libinputactions/InputActionsMain.cpp
    libinputactions/Range.cpp
    libinputactions/Value.cpp
)

add_library(libinputactions STATIC ${libinputactions_SRCS})
target_link_libraries(libinputactions PUBLIC
    libevdev-cpp
    Qt6::Core
    Qt6::DBus
    ${LIBEVDEV_LIBRARIES}
)
target_compile_definitions(libinputactions PUBLIC TEST_VIRTUAL=$<IF:$<BOOL:${BUILD_TESTS}>,virtual,>)
target_include_directories(libinputactions PRIVATE libinputactions libinputactions/. ${LIBEVDEV_INCLUDE_DIRS})
set_target_properties(libinputactions PROPERTIES PREFIX "")
target_link_libraries(libinputactions PRIVATE yaml-cpp)
target_compile_options(libinputactions PUBLIC -fexceptions -fPIC)
target_precompile_headers(libinputactions
    PUBLIC
        "$<$<COMPILE_LANGUAGE:CXX>:<QDebug$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QLoggingCategory$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QObject$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QPoint$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QPointF$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QRegularExpression$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QSize$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QSizeF$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QString$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QStringList$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QTimer$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QThread$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QVariant$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<QVector$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<chrono$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<cstdint$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<functional$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<map$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<memory$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<optional$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<ranges$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<set$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<unordered_map$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<unordered_set$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<vector$<ANGLE-R>>"
        "$<$<COMPILE_LANGUAGE:CXX>:<yaml-cpp/yaml.h$<ANGLE-R>>"
)